--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     implementation('com.github.almasb:fxgl:11.17') {
         exclude(group: 'org.openjfx')
     }
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation 'com.google.code.gson:gson:2.10'
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
