--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,8 @@ tasks.withType(JavaCompile) {
 }
 
 application {
-    mainModule = 'com.sowatec.addressbookfx'
-    mainClass = 'com.sowatec.addressbookfx.HelloApplication'
+    mainModule = 'com.sowatec.tasksfx'
+    mainClass = 'com.sowatec.tasksfx.TasksFX'
 }
 
 javafx {
@@ -44,9 +44,6 @@ dependencies {
     implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1')
     implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')
 
-    //implementation('eu.hansolo:tilesfx:17.1.9') {
-    //    exclude(group: 'org.openjfx')
-    //}
     implementation('com.github.almasb:fxgl:11.17') {
         exclude(group: 'org.openjfx')
     }
